--- a/src/scss/hpe/_hpe.defaults.scss
+++ b/src/scss/hpe/_hpe.defaults.scss
@@ -2,9 +2,9 @@
 
 $brand-font-family: 'Metric', Arial, sans-serif;
 $brand-large-number-font-family: 'Metric', Arial, sans-serif;
-$brand-color: #01a982;
+$brand-color: #19347f;
 $brand-color-lighter: desaturate(lighten($brand-color, 55%), 40%);
-$brand-neutral-colors: (#425563, #5F7A76, #80746E, #767676) !default;
+$brand-neutral-colors: (#425563, #5F7A76, #19347f, #767676) !default;
 $brand-accent-colors: (#2AD2C9, #614767, #ff8d6d) !default;
 $brand-status-colors: (
   critical: #F04953,
